--- a/src/styles/components/terminal.css
+++ b/src/styles/components/terminal.css
@@ -178,7 +178,7 @@
 }
 
 .terminal-outer-padding {
-  padding: 10px 10px 0 10px !important;
+  padding: 10px 10px 10px 10px !important;
   box-sizing: border-box !important;
 }
 
