--- a/src/styles/components/terminal.css
+++ b/src/styles/components/terminal.css
@@ -14,6 +14,12 @@
   padding: 0 !important;
   margin: 0 !important;
   box-sizing: border-box !important;
+  background-color: transparent !important;
+  /* CRÍTICO: Dejar que el contenedor maneje el fondo */
+}
+
+.xterm-screen {
+  background-color: transparent !important;
 }
 
 /* --- Split Terminal Styles --- */
